--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devicons-react": "^1.5.0",
     "framer-motion": "^12.23.22",
     "fullpage.js": "^4.0.37",
+    "lru-cache": "^11.2.2",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -21,6 +22,9 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@types/node": "24.10.1",
+    "@types/react": "19.2.7",
+    "tailwindcss": "^4",
+    "typescript": "5.9.3"
   }
 }
