--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "daisyui": "^5.5.18",
     "devicons-react": "^1.5.0",
     "framer-motion": "^12.23.22",
     "fullpage.js": "^4.0.37",
     "lru-cache": "^11.2.2",
     "next": "15.5.2",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-fullpage": "^0.1.19",
