--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "framer-motion": "^12.23.22",
     "fullpage.js": "^4.0.37",
     "lru-cache": "^11.2.2",
-    "next": "15.5.2",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-fullpage": "^0.1.19",
     "react-icons": "^5.5.0",
     "typewriter-effect": "^2.22.0"
